Add LibrariesDownloadQueue and use chain structure